# nvim-config

./: .gitignore  .gitmodules  .mrconfig  coc-settings.json  init.vim  plugin-dependencies.rst  py3-requirements.txt  pyproject.toml
UltiSnips/javascript/: custom.snippets
after/ftplugin/: css.vim  javascript.vim  python.vim  rst.vim  rust.vim  vim.vim
after/plugin/: colors.vim  rooter.vim
compiler/: flake8.vim  vint.vim
config/: py3pkg.txt
config/ncm2-tern/: README.rst  tern-config
example/: init.vim
example/init.d/plugin/: config.vim  languageclient.vim  load.vim
filetype/: devel.vim  html.vim  javascript_jsx.vim  python.vim  rust.vim  vim.vim
init.d/: ftplugin.vim
init.d/plugin/: afterload.vim  beforeload.vim  config.vim  load.vim
init.d/plugin/config.d/: ale.vim  asyncomplete.vim  denite.vim  deoplete.vim  ncm2.vim  vim-lsp.vim  vim-template.vim
init/plugin/: afterload.vim  beforeload.vim  load.vim
shared/ftplugin/: devel.vim  htmlcss.vim  javascript_jsx.vim
template/: =template=.rs
