[tool.poetry]
name = "nvimcfg"
version = "1.0.0"
description = "Python packages needed for nvim config"
authors = ["Ariel De Ocampo <arielmakestuff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.7"
bandit = "^1.5"
pydocstyle = "^5"
rstcheck = "^3.3"
vim-vint = "^0.3.19"
yapf = "^0.30"
rope = "^0.17"
autopep8 = "^1.4"
pynvim = "^0.4.0"
pip = "^19.3.1"
python-language-server = "^0.34"
mypy = "^0.782"
nodeenv = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
